@@ -159,6 +159,9 @@ Changes to the Mercury standard library:
   ensure that resources are released whether a called closure exits
   normally or throws an exception.
 
+* exception.m now contains a predicate throw_if_near_stack_limits which
+  can be used to prevent an application running out of stack space.
+
 * We've added predicates multi_map.to_flat_assoc_list/2 and
   multi_map.from_flat_assoc_list/2. 
 
